[gd_scene load_steps=5 format=3 uid="uid://miebgdotjh4s"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_5yeer"]
[ext_resource type="Script" path="res://scripts/HeartContainer.gd" id="1_n41qm"]
[ext_resource type="Texture2D" uid="uid://dftgq8g7l5l8f" path="res://resources/basic-heart.png" id="2_cu71p"]
[ext_resource type="Texture2D" uid="uid://rfbkvlxybwjl" path="res://resources/basic-halfheart.png" id="3_osup1"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5yeer")

[node name="HeartContainer" type="Control" parent="."]
custom_minimum_size = Vector2(16, 32)
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_n41qm")
full_heart_texture = ExtResource("2_cu71p")
half_heart_texture = ExtResource("3_osup1")

[node name="HBoxContainer" type="HBoxContainer" parent="HeartContainer"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 72.0
offset_bottom = 72.0
scale = Vector2(1.93152, 0.668606)

[node name="Red" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 31.0
offset_top = 606.0
offset_right = 176.0
offset_bottom = 633.0

[node name="Green" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 31.0
offset_top = 543.0
offset_right = 176.0
offset_bottom = 570.0

[node name="Blue" type="ProgressBar" parent="."]
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = 31.0
offset_top = 574.0
offset_right = 176.0
offset_bottom = 601.0

[node name="White" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 506.0
offset_right = 177.0
offset_bottom = 533.0

[node name="ColorPicker" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.083
anchor_right = 0.267
anchor_bottom = 0.455
offset_left = 289.6
offset_top = 170.216
offset_right = 212.416
offset_bottom = -70.84
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorPicker"]
layout_mode = 0
offset_left = -8.0
offset_right = 69.0
offset_bottom = 241.0

[node name="RedArea" type="Area2D" parent="ColorPicker/VBoxContainer"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ColorPicker/VBoxContainer/RedArea"]
polygon = PackedVector2Array(-22, -7, -42, 37, 34, 38)

[node name="Polygon2D" type="Polygon2D" parent="ColorPicker/VBoxContainer/RedArea"]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-22, -7, -41, 37, 33, 37)

[node name="WhiteArea" type="Area2D" parent="ColorPicker/VBoxContainer"]
position = Vector2(77, 39)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ColorPicker/VBoxContainer/WhiteArea"]
polygon = PackedVector2Array(-22, -7, -42, 37, 34, 38)

[node name="Polygon2D" type="Polygon2D" parent="ColorPicker/VBoxContainer/WhiteArea"]
polygon = PackedVector2Array(-21, -7, -41, 36, 33, 38)

[node name="BlueArea" type="Area2D" parent="ColorPicker/VBoxContainer"]
position = Vector2(0, 64)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ColorPicker/VBoxContainer/BlueArea"]
polygon = PackedVector2Array(-22, -7, -42, 37, 34, 38)

[node name="Polygon2D" type="Polygon2D" parent="ColorPicker/VBoxContainer/BlueArea"]
position = Vector2(-7, 18.5)
scale = Vector2(3.375, 2.5625)
color = Color(0, 0, 1, 1)
polygon = PackedVector2Array(0, -0.195122, -5.03703, -9.95123, 11.2593, 6.82926, -10.6667, 7.60976, -5.03703, -9.95123)

[connection signal="mouse_entered" from="ColorPicker/VBoxContainer/RedArea" to="." method="_on_red_area_mouse_entered"]
[connection signal="mouse_entered" from="ColorPicker/VBoxContainer/WhiteArea" to="." method="_on_white_area_mouse_entered"]
[connection signal="mouse_entered" from="ColorPicker/VBoxContainer/BlueArea" to="." method="_on_blue_area_mouse_entered"]
